--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+password.txt
+
 # dependencies
 /node_modules
 /.pnp
@@ -18,6 +21,8 @@
 # misc
 .DS_Store
 *.pem
+
+
 
 # debug
 npm-debug.log*
